JDK 11: options used to translate the J2ObjC JRE.
These options are forwarded to the javac parser.

	Change on 2019/02/20 by antoniocortes <antoniocortes@google.com>

-------------
Created by MOE: https://github.com/google/moe
MOE_MIGRATED_REVID=234885050